# imagery-psychophysics

./: .gitignore  pyproject.toml
curves/: analysis.py  coding.py  core.py  generation.py  models.py  probes.py  rate_distortion.py  search.py  simulations.py  visualization.py
notebooks/analysis/: capacity-limited.ipynb  fixed_capacity-1.ipynb  fixed_capacity-2.ipynb
notebooks/design/: experimental-design.ipynb
notebooks/misc/: find-probes.ipynb
notebooks/misc/probes/: probe_0.txt  probe_1.txt  probe_2.txt  probe_3.txt  probe_4.txt  probe_5.txt
notebooks/modeling/: error-distributions.ipynb  poission-coding-1.ipynb  poisson-coding-2.ipynb
