[project]
name = "curves"
version = "0.1.0"
description = "code for mental imagery psychophysics experiment"
authors = [
    {name = "Hayden Johnson", email = "haydenjohnson@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"