[tool.poetry]
name = "curves"
version = "0.1.0"
description = "code for mental imagery psychophysics experiment"
authors = ["Hayden Johnson <haydenjohnson@gmail.com>"]
readme = "README.md"
packages = [{include = "curves"}]

[tool.poetry.dependencies]
python = ">=3.9"
numpy = ">=1.22.0"
scipy = ">=1.8.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"